types lesson updates

--- a/Pandas—Getting Started /2 - Understanding Stuctures and Types.ipynb
+++ b/Pandas—Getting Started /2 - Understanding Stuctures and Types.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 135,
    "outputs": [
     {
      "name": "stdout",
@@ -31,9 +31,9 @@
      "text": [
       "Requirement already satisfied: numpy in /Users/wes/Library/Python/3.10/lib/python/site-packages (1.23.4)\r\n",
       "Requirement already satisfied: pandas in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (1.4.4)\r\n",
-      "Requirement already satisfied: python-dateutil>=2.8.1 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from pandas) (2.8.2)\r\n",
-      "Requirement already satisfied: pytz>=2020.1 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from pandas) (2022.2.1)\r\n",
       "Requirement already satisfied: numpy>=1.21.0 in /Users/wes/Library/Python/3.10/lib/python/site-packages (from pandas) (1.23.4)\r\n",
+      "Requirement already satisfied: pytz>=2020.1 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from pandas) (2022.2.1)\r\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from pandas) (2.8.2)\r\n",
       "Requirement already satisfied: six>=1.5 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\r\n"
      ]
     }
@@ -73,13 +73,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 136,
    "outputs": [
     {
      "data": {
       "text/plain": "(0,)"
      },
-     "execution_count": 79,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 137,
    "outputs": [
     {
      "name": "stdout",
@@ -120,13 +120,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 138,
    "outputs": [
     {
      "data": {
       "text/plain": "(4,)"
      },
-     "execution_count": 81,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 139,
    "outputs": [
     {
      "name": "stdout",
@@ -168,13 +168,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 140,
    "outputs": [
     {
      "data": {
       "text/plain": "0    5.5\n1    6.6\n2    7.7\n3    8.8\nName: Float Series, dtype: float64"
      },
-     "execution_count": 83,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,13 +190,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 141,
    "outputs": [
     {
      "data": {
       "text/plain": "0    0.0\n1    1.1\n2    2.2\n3    3.3\nName: Float Series, dtype: float64"
      },
-     "execution_count": 84,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,13 +212,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 142,
    "outputs": [
     {
      "data": {
       "text/plain": "0    5.5\n1    6.6\n2    7.7\n3    8.8\nName: Float Series, dtype: float64"
      },
-     "execution_count": 85,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,13 +233,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 143,
    "outputs": [
     {
      "data": {
       "text/plain": "bob      1.1\njane     2.2\nlance    3.3\nName: Dictionary Series, dtype: float64"
      },
-     "execution_count": 86,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,13 +256,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 144,
    "outputs": [
     {
      "data": {
       "text/plain": "1.1"
      },
-     "execution_count": 87,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,13 +278,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 145,
    "outputs": [
     {
      "data": {
-      "text/plain": "0    289\n1    641\n2    916\n3    203\n4    903\ndtype: int64"
+      "text/plain": "0     56\n1     42\n2    426\n3      2\n4    548\ndtype: int64"
      },
-     "execution_count": 88,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 146,
    "outputs": [
     {
      "name": "stdout",
@@ -327,13 +327,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 147,
    "outputs": [
     {
      "data": {
       "text/plain": "A    4.0\nB    4.0\nC    4.0\nD    4.0\ndtype: float64"
      },
-     "execution_count": 90,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,6 +343,29 @@
     "\n",
     "fours_series = pd.Series(data=4., index=[\"A\", \"B\", \"C\", \"D\"])\n",
     "fours_series.head()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "B    4.0\nC    4.0\nD    4.0\nE    5.0\nF    5.0\ndtype: float64"
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# to add to a series use pd.concat()\n",
+    "not_fours = pd.Series(data=5., index=[\"E\", \"F\"])\n",
+    "fours_series = pd.concat([fours_series, not_fours])\n",
+    "fours_series.tail()"
    ],
    "metadata": {
     "collapsed": false
@@ -367,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 149,
    "outputs": [
     {
      "name": "stdout",
@@ -394,10 +417,38 @@
    }
   },
   {
-   "cell_type": "markdown",
-   "source": [
-    "more on this later..."
+   "cell_type": "code",
+   "execution_count": 150,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.series.Series'>\n",
+      "Index: 8 entries, A to H\n",
+      "Series name: None\n",
+      "Non-Null Count  Dtype \n",
+      "--------------  ----- \n",
+      "8 non-null      object\n",
+      "dtypes: object(1)\n",
+      "memory usage: 128.0+ bytes\n"
+     ]
+    }
    ],
+   "source": [
+    "# you need to watch for unintended conversions\n",
+    "not_floats = pd.Series(data=\"5\", index=[\"G\", \"H\"])\n",
+    "fours_series = pd.concat([fours_series, not_floats])\n",
+    "# Will convert from float64 to object\n",
+    "fours_series.info()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
    "metadata": {
     "collapsed": false
    }
@@ -413,14 +464,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 151,
    "outputs": [
     {
      "data": {
       "text/plain": "       Dictionary Series\nbob                  1.1\njane                 2.2\nlance                3.3",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Dictionary Series</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>bob</th>\n      <td>1.1</td>\n    </tr>\n    <tr>\n      <th>jane</th>\n      <td>2.2</td>\n    </tr>\n    <tr>\n      <th>lance</th>\n      <td>3.3</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 92,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 152,
    "outputs": [
     {
      "name": "stdout",
@@ -461,14 +512,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 153,
    "outputs": [
     {
      "data": {
       "text/plain": "       Dictionary Series obj_nums\nbob                  1.1      1.1\njane                 2.2      2.2\nlance                3.3      3.3",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Dictionary Series</th>\n      <th>obj_nums</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>bob</th>\n      <td>1.1</td>\n      <td>1.1</td>\n    </tr>\n    <tr>\n      <th>jane</th>\n      <td>2.2</td>\n      <td>2.2</td>\n    </tr>\n    <tr>\n      <th>lance</th>\n      <td>3.3</td>\n      <td>3.3</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 94,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 154,
    "outputs": [
     {
      "name": "stdout",
@@ -510,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 155,
    "outputs": [
     {
      "name": "stdout",
@@ -536,14 +587,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 156,
    "outputs": [
     {
      "data": {
       "text/plain": "       Dictionary Series obj_nums    C\nbob                  1.1      1.1  NaN\njane                 2.2      2.2  NaN\nlance                3.3      3.3  NaN",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Dictionary Series</th>\n      <th>obj_nums</th>\n      <th>C</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>bob</th>\n      <td>1.1</td>\n      <td>1.1</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>jane</th>\n      <td>2.2</td>\n      <td>2.2</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>lance</th>\n      <td>3.3</td>\n      <td>3.3</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 97,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -558,14 +609,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 157,
    "outputs": [
     {
      "data": {
       "text/plain": "       Dictionary Series obj_nums    C\nbob                  1.1      1.1  1.1\njane                 2.2      2.2  2.2\nlance                3.3      3.3  3.3",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Dictionary Series</th>\n      <th>obj_nums</th>\n      <th>C</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>bob</th>\n      <td>1.1</td>\n      <td>1.1</td>\n      <td>1.1</td>\n    </tr>\n    <tr>\n      <th>jane</th>\n      <td>2.2</td>\n      <td>2.2</td>\n      <td>2.2</td>\n    </tr>\n    <tr>\n      <th>lance</th>\n      <td>3.3</td>\n      <td>3.3</td>\n      <td>3.3</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 98,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 158,
    "outputs": [
     {
      "name": "stdout",
