clean up on types lesson

--- a/Pandas—Getting Started /2 - Understanding Stuctures and Types.ipynb
+++ b/Pandas—Getting Started /2 - Understanding Stuctures and Types.ipynb
@@ -22,24 +22,20 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": 135,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: numpy in /Users/wes/Library/Python/3.10/lib/python/site-packages (1.23.4)\r\n",
-      "Requirement already satisfied: pandas in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (1.4.4)\r\n",
-      "Requirement already satisfied: numpy>=1.21.0 in /Users/wes/Library/Python/3.10/lib/python/site-packages (from pandas) (1.23.4)\r\n",
-      "Requirement already satisfied: pytz>=2020.1 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from pandas) (2022.2.1)\r\n",
-      "Requirement already satisfied: python-dateutil>=2.8.1 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from pandas) (2.8.2)\r\n",
-      "Requirement already satisfied: six>=1.5 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\r\n"
-     ]
-    }
-   ],
+   "cell_type": "markdown",
    "source": [
-    "## Install & Import\n",
+    "## Install & Import"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "\n",
     "import sys\n",
     "\n",
     "!{sys.executable} -m pip install numpy\n",
@@ -64,8 +60,7 @@
    "cell_type": "markdown",
    "source": [
     "## Series\n",
-    "Series are labeled arrays and the building block to\n",
-    "DataFrame rows and columns."
+    "Series are labeled arrays and the building block to DataFrame rows and columns."
    ],
    "metadata": {
     "collapsed": false
@@ -73,17 +68,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "(0,)"
-     },
-     "execution_count": 136,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "empty_float_series = pd.Series(data=None, index=None, dtype=np.float64, name=\"Float Series\")\n",
     "empty_float_series.shape"
@@ -94,23 +80,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.series.Series'>\n",
-      "Index: 0 entries\n",
-      "Series name: Float Series\n",
-      "Non-Null Count  Dtype  \n",
-      "--------------  -----  \n",
-      "0 non-null      float64\n",
-      "dtypes: float64(1)\n",
-      "memory usage: 0.0+ bytes\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "empty_float_series.info()"
    ],
@@ -120,20 +91,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "(4,)"
-     },
-     "execution_count": 138,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "data = [0.0, 1.1, 2.2, 3.3]\n",
-    "float_series = pd.Series(data=data, index=None, dtype=np.float64, name=\"Float Series\")\n",
+    "float_series = pd.Series(data=data, index=[0,1,2,3], dtype=np.float64, name=\"Float Series\")\n",
     "float_series.shape"
    ],
    "metadata": {
@@ -142,23 +104,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.series.Series'>\n",
-      "RangeIndex: 4 entries, 0 to 3\n",
-      "Series name: Float Series\n",
-      "Non-Null Count  Dtype  \n",
-      "--------------  -----  \n",
-      "4 non-null      float64\n",
-      "dtypes: float64(1)\n",
-      "memory usage: 160.0 bytes\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "float_series.info()"
    ],
@@ -168,17 +115,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "0    5.5\n1    6.6\n2    7.7\n3    8.8\nName: Float Series, dtype: float64"
-     },
-     "execution_count": 140,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# you can easily make a change to every value through\n",
     "# functions like add\n",
@@ -190,17 +128,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "0    0.0\n1    1.1\n2    2.2\n3    3.3\nName: Float Series, dtype: float64"
-     },
-     "execution_count": 141,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# but this does not edit the underlying stored values\n",
     "# unless it is specifically assigned back to the same variable name\n",
@@ -212,17 +141,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "0    5.5\n1    6.6\n2    7.7\n3    8.8\nName: Float Series, dtype: float64"
-     },
-     "execution_count": 142,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "float_series = float_series.add(5.5)\n",
     "float_series.head()"
@@ -233,17 +153,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "bob      1.1\njane     2.2\nlance    3.3\nName: Dictionary Series, dtype: float64"
-     },
-     "execution_count": 143,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# the data parameter can accept several types not just list/array data\n",
     "data_dict = {\"bob\":1.1, \"jane\":2.2, \"lance\":3.3}\n",
@@ -256,17 +167,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "1.1"
-     },
-     "execution_count": 144,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# notice the dictionary keys became the index\n",
     "# This now allows use like\n",
@@ -278,17 +180,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "0     56\n1     42\n2    426\n3      2\n4    548\ndtype: int64"
-     },
-     "execution_count": 145,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# you can also use numpy ndarrays\n",
     "np_rand_data = np.random.randint(0,1000,100)\n",
@@ -301,23 +194,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.series.Series'>\n",
-      "RangeIndex: 100 entries, 0 to 99\n",
-      "Series name: None\n",
-      "Non-Null Count  Dtype\n",
-      "--------------  -----\n",
-      "100 non-null    int64\n",
-      "dtypes: int64(1)\n",
-      "memory usage: 928.0 bytes\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "random_series.info()"
    ],
@@ -327,17 +205,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "A    4.0\nB    4.0\nC    4.0\nD    4.0\ndtype: float64"
-     },
-     "execution_count": 147,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# you can also set a single value with a given index like\n",
     "\n",
@@ -350,17 +219,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "B    4.0\nC    4.0\nD    4.0\nE    5.0\nF    5.0\ndtype: float64"
-     },
-     "execution_count": 148,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# to add to a series use pd.concat()\n",
     "not_fours = pd.Series(data=5., index=[\"E\", \"F\"])\n",
@@ -390,18 +250,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.12.23.3\n",
-      "verus\n",
-      "6.6\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# Why dtypes matter.. because there is specific api and functions\n",
     "# to each types that can be very very useful.\n",
@@ -418,23 +268,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.series.Series'>\n",
-      "Index: 8 entries, A to H\n",
-      "Series name: None\n",
-      "Non-Null Count  Dtype \n",
-      "--------------  ----- \n",
-      "8 non-null      object\n",
-      "dtypes: object(1)\n",
-      "memory usage: 128.0+ bytes\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# you need to watch for unintended conversions\n",
     "not_floats = pd.Series(data=\"5\", index=[\"G\", \"H\"])\n",
@@ -442,13 +277,6 @@
     "# Will convert from float64 to object\n",
     "fours_series.info()"
    ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [],
    "metadata": {
     "collapsed": false
    }
@@ -464,18 +292,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "       Dictionary Series\nbob                  1.1\njane                 2.2\nlance                3.3",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Dictionary Series</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>bob</th>\n      <td>1.1</td>\n    </tr>\n    <tr>\n      <th>jane</th>\n      <td>2.2</td>\n    </tr>\n    <tr>\n      <th>lance</th>\n      <td>3.3</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "execution_count": 151,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "first_df = pd.DataFrame(data=dict_series)\n",
     "first_df.head()"
@@ -486,23 +304,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 3 entries, bob to lance\n",
-      "Data columns (total 1 columns):\n",
-      " #   Column             Non-Null Count  Dtype  \n",
-      "---  ------             --------------  -----  \n",
-      " 0   Dictionary Series  3 non-null      float64\n",
-      "dtypes: float64(1)\n",
-      "memory usage: 156.0+ bytes\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "first_df.info()"
    ],
@@ -512,18 +315,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "       Dictionary Series obj_nums\nbob                  1.1      1.1\njane                 2.2      2.2\nlance                3.3      3.3",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Dictionary Series</th>\n      <th>obj_nums</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>bob</th>\n      <td>1.1</td>\n      <td>1.1</td>\n    </tr>\n    <tr>\n      <th>jane</th>\n      <td>2.2</td>\n      <td>2.2</td>\n    </tr>\n    <tr>\n      <th>lance</th>\n      <td>3.3</td>\n      <td>3.3</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "execution_count": 153,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "first_df[\"obj_nums\"] = [\"1.1\", \"2.2\", \"3.3\"]\n",
     "first_df.head()"
@@ -534,24 +327,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 3 entries, bob to lance\n",
-      "Data columns (total 2 columns):\n",
-      " #   Column             Non-Null Count  Dtype  \n",
-      "---  ------             --------------  -----  \n",
-      " 0   Dictionary Series  3 non-null      float64\n",
-      " 1   obj_nums           3 non-null      object \n",
-      "dtypes: float64(1), object(1)\n",
-      "memory usage: 180.0+ bytes\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "first_df.info()"
    ],
@@ -561,23 +338,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.series.Series'>\n",
-      "RangeIndex: 3 entries, 0 to 2\n",
-      "Series name: None\n",
-      "Non-Null Count  Dtype \n",
-      "--------------  ----- \n",
-      "3 non-null      object\n",
-      "dtypes: object(1)\n",
-      "memory usage: 152.0+ bytes\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "obj_series.info()"
    ],
@@ -587,20 +349,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "       Dictionary Series obj_nums    C\nbob                  1.1      1.1  NaN\njane                 2.2      2.2  NaN\nlance                3.3      3.3  NaN",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Dictionary Series</th>\n      <th>obj_nums</th>\n      <th>C</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>bob</th>\n      <td>1.1</td>\n      <td>1.1</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>jane</th>\n      <td>2.2</td>\n      <td>2.2</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>lance</th>\n      <td>3.3</td>\n      <td>3.3</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "execution_count": 156,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "first_df[\"C\"] = obj_series\n",
+    "# wont work because it not just a list/array\n",
     "first_df.head()"
    ],
    "metadata": {
@@ -609,20 +362,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "       Dictionary Series obj_nums    C\nbob                  1.1      1.1  1.1\njane                 2.2      2.2  2.2\nlance                3.3      3.3  3.3",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Dictionary Series</th>\n      <th>obj_nums</th>\n      <th>C</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>bob</th>\n      <td>1.1</td>\n      <td>1.1</td>\n      <td>1.1</td>\n    </tr>\n    <tr>\n      <th>jane</th>\n      <td>2.2</td>\n      <td>2.2</td>\n      <td>2.2</td>\n    </tr>\n    <tr>\n      <th>lance</th>\n      <td>3.3</td>\n      <td>3.3</td>\n      <td>3.3</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "execution_count": 157,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
-    "first_df[\"C\"] = obj_series.values\n",
+    "first_df[\"C\"] = obj_series.values # needs to be unpacked\n",
     "first_df.head()"
    ],
    "metadata": {
@@ -631,25 +374,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 3 entries, bob to lance\n",
-      "Data columns (total 3 columns):\n",
-      " #   Column             Non-Null Count  Dtype  \n",
-      "---  ------             --------------  -----  \n",
-      " 0   Dictionary Series  3 non-null      float64\n",
-      " 1   obj_nums           3 non-null      object \n",
-      " 2   C                  3 non-null      object \n",
-      "dtypes: float64(1), object(2)\n",
-      "memory usage: 204.0+ bytes\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "first_df.info()"
    ],
