additional commends for types lesson

--- a/Pandas—Getting Started /2 - Understanding Stuctures and Types.ipynb
+++ b/Pandas—Getting Started /2 - Understanding Stuctures and Types.ipynb
@@ -11,7 +11,7 @@
     "* Dtypes\n",
     "\n",
     "To use you need to have python installed and jupyterlab.  </br>\n",
-    "The code assumes you have a basic familiarity with python syntax and use.\n",
+    "The code assumes you have a basic familiarity with python syntax and use. It also assumes you are familiar with head, tail, and info functions for series and dataframes covered in earlier lessons.\n",
     "## Packages Needed\n",
     "* sys\n",
     "* pandas\n",
@@ -35,7 +35,6 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "\n",
     "import sys\n",
     "\n",
     "!{sys.executable} -m pip install numpy\n",
@@ -295,6 +294,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "# Dataframes can be loaded from a series\n",
     "first_df = pd.DataFrame(data=dict_series)\n",
     "first_df.head()"
    ],
@@ -318,6 +318,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "# you can also add columns after creating a base dataframe\n",
     "first_df[\"obj_nums\"] = [\"1.1\", \"2.2\", \"3.3\"]\n",
     "first_df.head()"
    ],
@@ -341,6 +342,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "# can insert a series into a new column but not like the list above\n",
     "obj_series.info()"
    ],
    "metadata": {
